--- a/currentweather/templates/currentweather/index.html
+++ b/currentweather/templates/currentweather/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="w-100 h-100">
 
 <head>
     <title>Current Weather</title>
@@ -22,32 +22,68 @@
 
 </head>
 
-<body>
+<style>
+    /* hide scrollbar but allow scrolling */
+    #coolumn {
+        -ms-overflow-style: none;
+        /* for Internet Explorer, Edge */
+        scrollbar-width: none;
+        /* for Firefox */
+        overflow-y: scroll;
+    }
 
-    <div class="container w-100 p-3 mx-auto">
+    #coolumn::-webkit-scrollbar {
+        display: none;
+        /* for Chrome, Safari, and Opera */
+    }
+</style>
 
-        <div class="row w-100 p-3 mx-auto">
-            <form action="" method="POST" class="w-100">
-                {% csrf_token %}
-                <div class="form-group">
-                    <input type="text" placeholder="Enter City Name" name="search" id="input1" class="form-control"
-                        required>
-                </div>
-                <button id="search" type="submit" class="btn btn-primary w-100">Search</button>
-            </form>
-        </div>
+<body class="container w-100 h-100">
+    <div class="row w-100 h-100">
 
-        {% if city_name %}
-        <div class="row p-3 mx-auto">
-            <div class="alert alert-success fade show w-100" role="alert">
-                <h4 class="alert-heading">{{ city_name }}</h4>
-                <p>Actual Temperature: {{ temp }}</p>
-                <p>Feels-like Temperature: {{ feels_like }}</p>
-                <p>Humidity: {{ humidity }}</p>
+        <div class="col-7 h-100" id="coolumn">
+
+            <div class="row w-100 mx-0 p-3 sticky-top bg-white">
+                <form method="GET" class="w-100">
+                    <div class="form-row w-100 m-0">
+                        <div class="col-9 p-0 pr-2">
+                            <input type="text" placeholder="City not in list? Try here" name="q" class="form-control"
+                                required>
+                        </div>
+                        <div class="col-3 p-0">
+                            <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </div>
-        {% endif %}
 
+            <form method="GET" class="w-100">
+                <div class="row w-100 px-3 mx-0">
+                    {% for dict in cities_select %}
+                    <div class="col-3 px-0">
+                        <button name="q" type="submit" value="{{ dict.capital }}"
+                            class="btn btn-light btn-block rounded-0 text-left text-truncate">
+                            {{ dict.capital }}
+                        </button>
+                    </div>
+                    {% endfor %}
+                </div>
+            </form>
+
+        </div>
+
+        <div class="col-5 p-3 bg-secondary h-100">
+
+            {% if weather %}
+            <div class="alert alert-success fade show w-100 my-auto" role="alert">
+                <h4 class="alert-heading">{{ weather.city_name }}</h4>
+                <p>Actual Temperature: {{ weather.temp }}</ p>
+                <p>Feels-like Temperature: {{ weather.feels_like }}</p>
+                <p>Humidity: {{ weather.humidity }}</p>
+            </div>
+            {% endif %}
+
+        </div>
     </div>
 
 </body>
